welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
if (!isOverBaggle) backward
else if (!isFacingWall && isCarryingBaggle) forward
else if (!(isFacingWall && isCarryingBaggle)) {pickupBaggle;forward}
else if (isFacingWall && isCarryingBaggle) dropBaggle